--- a/index.html
+++ b/index.html
@@ -6,48 +6,100 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LIGHT Group SARL</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <style>
     body {
       font-family: 'Poppins', sans-serif;
       margin: 0;
-      background-color: #fff;
-      color: #000;
-      line-height: 1.6;
+      background-color: #f9f9f9;
+      color: #111;
     }
     header {
-      background-color: #000;
-      color: gold;
-      padding: 1.5rem 1rem;
+      background-color: #111;
+      color: #d4af37;
+      padding: 1rem;
       text-align: center;
       position: sticky;
       top: 0;
       z-index: 999;
     }
     nav a {
-      color: gold;
+      color: #d4af37;
       margin: 0 1rem;
       text-decoration: none;
       font-weight: bold;
     }
-    section {
-      padding: 2rem;
-      text-align: center;
-    }
     .hero {
-      background: linear-gradient(to right, #000, gold);
+      background: linear-gradient(135deg, #111, #d4af37);
       color: #fff;
       padding: 4rem 2rem;
-      border-radius: 0 0 30px 30px;
+      text-align: center;
     }
     .hero h2 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+    }
+    .section {
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    .card-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2rem;
+      margin-top: 2rem;
+    }
+    .card {
+      background: #fff;
+      border-radius: 15px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      padding: 2rem;
+      width: 280px;
+      transition: transform 0.3s;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    .card i {
       font-size: 2.5rem;
+      color: #d4af37;
+      margin-bottom: 1rem;
     }
     footer {
-      background-color: #111;
-      color: #ccc;
-      text-align: center;
+      background-color: #2c2c2c;
+      color: #eee;
       padding: 2rem 1rem;
-      font-size: 0.9rem;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      text-align: left;
+    }
+    footer div {
+      margin: 1rem;
+    }
+    .footer-title {
+      font-weight: bold;
+      margin-bottom: 1rem;
+    }
+    .whatsapp {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25D366;
+      color: white;
+      border-radius: 50%;
+      width: 55px;
+      height: 55px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.5rem;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+      text-decoration: none;
     }
   </style>
 </head>
@@ -64,17 +116,50 @@
 
 <section class="hero">
   <h2>Votre lumière, nos services</h2>
-  <p>Découvrez notre groupe et ses 12 départements, tous au service de vos besoins.</p>
+  <p>Découvrez nos 12 départements, chacun dédié à l'excellence.</p>
 </section>
 
-<section>
-  <h2>Qui sommes-nous ?</h2>
-  <p>LIGHT Group SARL est une entreprise pluridisciplinaire basée à Lomé, Togo. Nous mettons en œuvre notre expertise pour vous fournir des services fiables, innovants et accessibles.</p>
+<section class="section">
+  <h2>Nos valeurs</h2>
+  <div class="card-container">
+    <div class="card">
+      <i class="fas fa-lightbulb"></i>
+      <h3>Innovation</h3>
+      <p>Nous apportons des idées neuves à chaque service offert.</p>
+    </div>
+    <div class="card">
+      <i class="fas fa-users"></i>
+      <h3>Engagement</h3>
+      <p>Un accompagnement total pour la satisfaction de nos clients.</p>
+    </div>
+    <div class="card">
+      <i class="fas fa-handshake"></i>
+      <h3>Fiabilité</h3>
+      <p>Des prestations sécurisées, rapides et transparentes.</p>
+    </div>
+  </div>
 </section>
 
 <footer>
-  &copy; 2025 LIGHT Group SARL. Tous droits réservés. | Contact : +228 92 47 00 75
+  <div>
+    <p class="footer-title">LIGHT Group SARL</p>
+    <p>Entreprise multi-services basée à Lomé, Togo.</p>
+  </div>
+  <div>
+    <p class="footer-title">Contact</p>
+    <p>Tél : +228 92 47 00 75</p>
+    <p>Email : info@lightgroup.tg</p>
+  </div>
+  <div>
+    <p class="footer-title">Suivez-nous</p>
+    <p><i class="fab fa-facebook"></i> Facebook</p>
+    <p><i class="fab fa-instagram"></i> Instagram</p>
+  </div>
 </footer>
+
+<a href="https://wa.me/22892470075" class="whatsapp" target="_blank" title="Discuter sur WhatsApp">
+  <i class="fab fa-whatsapp"></i>
+</a>
 
 </body>
 </html>
